# MoonUp

./: .gitignore  LICENSE  README.md  index.html  moonup.key  moonup.key.pub  package-lock.json  package.json
.github/workflows/: release.yml
src/: config.ts  main.ts  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
