[package]
name = "moonup"
version = "1.7.2"
description = "A lightweight WoW Addon Manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
walkdir = "2"
tauri-plugin-autostart = "2.5.1"
